전남대 BE_모아림 3주차 과제(1단계) (#204)
* Update README.md

* feat: WishListRequestState 생성

* feat: JPA의존성 추가

* feat: application.properties, show-sql 추가

* refactor: Product Entity

* refactor: ProductRepository

* refactor: ProductService 수정

* refactor: PageController 수정

* refactor: Member Entity

* refactor: MemberRepository

* refactor: MemberService 수정

* refactor: WishDto 수정(productName 제외)

* refactor: Wish Entity

* refactor: WishRepository

* refactor: WishService 수정

* fix: MemberControllerTest

* remove: ProductControllerTest 삭제

* WishControllerTest 주석처리

* feat: ProductRepositoryTest

* feat: WishRepositoryTest

* refactor: Product Entity 수정

* refactor: Wish Entity 수정

* refactor: findALlByMemberId() 수정

* refactor: MemberEntity

* refactor: MemberDto 수정

* fix: WishControllerTest